# madnklo

./: .bzrignore  .gitignore  ME7_acceptance_test.txt  ME7_unit_test.txt  MadNkLO_acceptance_test.txt  MadNkLO_all_tests.sh  MadNkLO_unit_test.txt  README.md  setup.py  todo.txt
Documentation/CorrelatedMatrixElements/: ColorCorrelators_MadNkLO.tex
Documentation/CountertermGeneration/: CountertermGeneration_MadNkLO.tex
Documentation/SubtractionWithDistributedSofts/: SubtractionWithDistributedSofts_MadNkLO.tex
Documentation/ee2uuxddxSubtraction/: ee2uuxddxSubtraction_MadNkLO.tex
ME7_integration_examples/bbxH/: Cards  ME7_driver.py  ME_generation.mg5  compile_MEs.sh  (+1 more)
MadSpin/: madspin
Template/ME7/rust/madnklo/: Cargo.toml
Template/ME7/rust/madnklo/src/: counterterm.rs  integrand.rs  lib.rs  main.rs  matrix_element_evaluator.rs  matrix_elements.rs  phase_space_generator.rs  run_card.rs  runcard.rs  settings.rs  settings_card.rs
aloha/: aloha_fct.py  aloha_lib.py  aloha_object.py  aloha_parsers.py  aloha_writers.py  create_aloha.py
input/: .gitignore
junk/: CSmapping.f  LO_B.f  alphaS.f  analysis.f  configs.inc  cuts.f  driver_n.f  dsample-giovanni.f  gen_phase_space.f  genps.f  hbook.f  kinematics.f  vegas.f
madgraph/: __init__.py
mg5decay/: decay_objects.py
models/: __init__.py  check_param_card.py  import_ufo.py  model_reader.py  usermod.py  write_param_card.py
src_to_common/: imap.f  phase_space.f  sectors.f  util.f
tests/: test_manager.py  time_db
tmp_fortran/: sectors.f  universal_kernel.f  universal_kernel.f~  utils_funcs.f  variables.f
(+406 files in other folders)
